syntax = "proto2";

import "scalapb/scalapb.proto";
import "v1/tenant.proto";

option (scalapb.options) = {
  package_name: "it.pagopa.interop.tenantmanagement.model.persistence.serializer.v1"
  no_default_values_in_constructor : true
};

message TenantCreatedV1 {
  required TenantV1 tenant = 1;
}

message TenantUpdatedV1 {
  required TenantV1 tenant = 1;
}

message TenantDeletedV1 {
  required string tenantId = 1;
}

message SelfcareMappingCreatedV1 {
  required string selfcareId = 1;
  required string tenantId = 2;
}

message SelfcareMappingDeletedV1 {
  required string selfcareId = 1;
}

message TenantMailAddedV1 {
  required string tenantId = 1;
  required string mailId = 2;
  required TenantV1 tenant = 3;  
}

message TenantMailDeletedV1 {
  required string tenantId = 1;
  required string mailId = 2;
  required TenantV1 tenant = 3;  
}